[package]
name = "support_tool"
version = "0.1.0"
edition = "2021"
authors = ["FazX"]
description = "FazX Support Tool"

[dependencies]
eframe = { version = "0.29", features = ["persistence"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image", "svg"] }
image = { version = "0.25", features = ["png"] }
sysinfo = "0.32"
wmi = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winreg = "0.52"
open = "5.3"
resvg = "0.42"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Storage_FileSystem",
    "Win32_System_WindowsProgramming",
]

[[bin]]
name = "support_tool"
path = "src/main.rs"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
strip = true
